# pytool_mnemo_lib

./: .gitignore  .pre-commit-config.yaml  MNEMO241212203557-1.dmp  MNEMO241212203557.dmp  MNEMO_2024_12_15.dmp  Makefile  README.md  demo.py  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml  release.yml
mnemo_lib/: __init__.py  base.py  encoder.py  models.py  reader.py  sections.py  shots.py  utils.py
mnemo_lib/commands/: convert.py  correct.py  main.py
tests/: test_cmds.py  test_intbuffer.py  test_models.py  test_read.py  test_v2.json  test_v2.xlsx  test_v5.dmp
tests/artifacts/: dmpfile.json  section.json  shot.json  test_v2.dmp  test_v2.json  test_v5.json  test_v5.xlsx  test_v5_buggy_EOS.dmp  test_v5_buggy_EOS.json
tests/commands/: base.py  test_convert.py  test_correct.py  test_split.py
