[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[tool.distutils.bdist_wheel]
universal = true

[project]
name = "mnemo_lib"
version = "0.0.1"
description = "A library to read MNemo Survey Tool Memory files"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
keywords = ["cave", "survey", "karst"]
authors = [
  {name = "Jonathan Dekhtiar", email = "jonathan@dekhtiar.com" }
]
maintainers = [
  {name = "Jonathan Dekhtiar", email = "jonathan@dekhtiar.com" }
]
classifiers = [
    # How mature is this project? Common values are
    #   3 - Alpha
    #   4 - Beta
    #   5 - Production/Stable
    "Development Status :: 3 - Alpha",

    # Indicate who your project is intended for
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Information Technology",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries",
    "Topic :: Utilities",

    # Pick your license as you wish
    "License :: OSI Approved :: Apache Software License",

    # Not OS Specific
    "Operating System :: OS Independent",

    # Specify the Python versions you support here. In particular, ensure
    # that you indicate you support Python 3. These classifiers are *not*
    # checked by "pip install". See instead "requires-python" key in this file.
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
]
dependencies = [
]

[project.optional-dependencies]
dev = [
    "check-manifest",
    # Pre Commit Hooks
    "pre-commit>=3.6.0,<3.7",
    # Linting
    "ruff>=0.3,<0.4"

]
test = [
    "pytest>=8.0.0,<9.0.0",
    "pytest-cov>=5.0.0,<6.0.0",
    "pytest-dotenv>=0.5.0,<1.0.0",
    "pytest-env>=1.1.3,<2.0.0",
    "pytest-runner>=6.0.0,<7.0.0",
    "pytest-ordering>=0.6,<1.0.0",
    "parameterized>=0.9.0,<0.10"
]

[project.urls]
"Homepage" = "https://pypi.org/project/mnemo-lib/"
"Bug Reports" = "https://github.com/MX-SpeleoSurvey/pytool_mnemo_lib/issues"
"Source" = "https://github.com/MX-SpeleoSurvey/pytool_mnemo_lib"

[project.scripts]
mnemo = "mnemo_lib.commands.main:main"

[project.entry-points."mnemo.actions"]
convert = "mnemo_lib.commands.convert:convert"

# # This is configuration specific to the `setuptools` build backend.
# # If you are using a different build backend, you will need to change this.
# [tool.setuptools]
# # If there are data files included in your packages that need to be
# # installed, specify them here.
# package-data = {"sample" = ["*.dat"]}

[tool.isort]
profile = "black"

[tool.ruff.format]
indent-style = "space"

[tool.pytest.ini_options]
testpaths = [
    "tests/",
]
addopts = "-vvv --cov=mnemo_lib --cov-report=term-missing"
# addopts = "-vvv --cov=mnemo_lib --cov-report=term-missing --capture=no"


[tool.pytest_env]
RAY_ADDRESS = "local"
NVIDIA_DISABLE_REQUIRE=1

